testing/framework/resources/Advanced/Passing/mondrian/query5615.q
select store.store_state as c0, store.store_city as c1, count(distinct sales_fact_1997.customer_id) as m0 from store as store, sales_fact_1997 as sales_fact_1997, time_by_day as time_by_day, product_class as product_class, product as product where sales_fact_1997.store_id = store.store_id and store.store_state = 'OR' and store.store_city = 'Portland' and sales_fact_1997.time_id = time_by_day.time_id and sales_fact_1997.product_id = product.product_id and product.product_class_id = product_class.product_class_id and ((product_class.product_family = 'Food' and time_by_day.quarter = 'Q1' and time_by_day.the_year = 1997) or (product_class.product_family = 'Drink' and time_by_day.month_of_year = 4 and time_by_day.quarter = 'Q2' and time_by_day.the_year = 1997)) group by store.store_state, store.store_city;
