testing/framework/resources/Advanced/Failing/mondrian/query809.q
select customer.country as c0, customer.state_province as c1, customer.city as c2, store.store_sqft as c3 from customer as customer, sales_fact_1997 as sales_fact_1997, store as store where sales_fact_1997.customer_id = customer.customer_id and sales_fact_1997.store_id = store.store_id group by customer.country, customer.state_province, customer.city, store.store_sqft order by customer.country ASC NULLS LAST, customer.state_province ASC NULLS LAST, customer.city ASC NULLS LAST, store.store_sqft ASC NULLS LAST;
